src/objects/ExternalSystemPackage__c.object
<CustomObject>
    <fields>
        <fullName>DataFormat__c</fullName>
        <label>Data Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedNumberOfRecords__c</fullName>
        <inlineHelpText>The estimated number of records expected each time the interface is executed. This number is multiplied by the frequency to help forecast expected data &amp; API usage.</inlineHelpText>
        <label>Estimated Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalSystemPackageNotes__c</fullName>
        <label>External System Package Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalSystem__c</fullName>
        <label>External System</label>
        <referenceTo>ExternalSystem__c</referenceTo>
        <relationshipLabel>External System Packages</relationshipLabel>
        <relationshipName>ExternalSystemPackages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Time</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bulk API</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Manual Load</fullName>
                </value>
                <value>
                    <fullName>REST API</fullName>
                </value>
                <value>
                    <fullName>SOAP API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External System Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDataMigration</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemPackage__c.DataMigration</value>
        </filters>
        <label>All Data Migration</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <listViews>
        <fullName>AllInScopeDataMigrations</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemPackage__c.DataMigration</value>
        </filters>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope Data Migrations</label>
    </listViews>
    <listViews>
        <fullName>AllInScopeInterfaces</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemPackage__c.InboundInterface,ExternalSystemPackage__c.OutboundInterface</value>
        </filters>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope Interfaces</label>
    </listViews>
    <listViews>
        <fullName>AllInterfaces</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>EstimatedNumberOfRecords__c</columns>
        <columns>Protocol__c</columns>
        <columns>DataFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemPackage__c.InboundInterface,ExternalSystemPackage__c.OutboundInterface</value>
        </filters>
        <label>All Interfaces</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External System Packages</pluralLabel>
    <recordTypes>
        <fullName>DataMigration</fullName>
        <active>true</active>
        <label>Data Migration</label>
    </recordTypes>
    <recordTypes>
        <fullName>InboundInterface</fullName>
        <active>true</active>
        <label>Inbound Interface</label>
    </recordTypes>
    <recordTypes>
        <fullName>OutboundInterface</fullName>
        <active>true</active>
        <label>Outbound Interface</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>